# eeip.py

./: .gitignore  Justfile  README.md  pyproject.toml  ruff.toml
eeip/: __init__.py  cip.py  eipclient.py  encapsulation.py
examples/: sample1_rockwell_implicit.py  smc_open_close_cycle.py
src/eeip/: cip.py  eipclient.py  encapsulation.py
